# dicom2nii

./: .gitignore  cmd.txt  requirements.txt
.cursor/: dicom2nii-python.md
.cursor/rules/: .cursorrules  database-interaction-rules.mdc  error-handling-rules.mdc  fastapi-application-rules.mdc  fastapi-route-specific-rules.mdc  general-typescript-rule.mdc  medical-reformatted-detection.md  performance-optimization-rules.mdc  pydantic-model-rules.mdc  python-general-principles.mdc  uv-project-management.md
python/: 00_DOCUMENTATION_INDEX.md  01_FINAL_COMPLETION_PLAN.md  01_FINAL_REFACTOR_PLAN.md  02_REFACTOR_PLAN.md  03_REFACTOR_MIGRATION_GUIDE.md  04_REFACTOR_SUMMARY.md  05_REFACTOR_COMPLETION_REPORT.md  06_T1_T2_IMPROVEMENT_PLAN.md  07_FINAL_IMPROVEMENT_SUMMARY.md  08_FINAL_COMPLETION_REPORT.md  09_UV_SETUP_GUIDE.md  10_FINAL_COMPLETION_SUMMARY.md  11_PROBLEM_RESOLUTION_SUMMARY.md  12_FINAL_PROBLEM_SOLUTION.md  13_LOGIC_ISSUES_RESOLUTION.md  14_PROCESSING_MODULE_RESTRUCTURE_PLAN.md  LICENSE  pyproject.toml  requirements.txt
python/src/: __main__.py  main.py  new_main.py  upload_test.py
python/src/cli/: __init__.py  commands.py  main.py
python/src/convert/: __init__.py  base.py  config.py  convert.py  convert_nifti.py  convert_nifti_postprocess.py  convert_nifti_to_dicom.py  convert_test.py  dicom_rename.py  dicom_rename_ct.py  dicom_rename_mr.py  dicom_rename_mr_postprocess.py  list_dicom.py  list_nii.py
python/src/converters/: __init__.py  base.py  dicom_to_nifti.py  nifti_to_dicom.py
python/src/core/: __init__.py  config.py  enums.py  exceptions.py  logging.py  types.py
python/src/managers/: __init__.py  base.py  convert_manager.py  dicom_rename_manager.py  upload_manager.py
python/src/processing/: __init__.py  base.py  factory.py
python/src/processing/dicom/: __init__.py  additional_strategies.py  strategies.py
python/src/processing/dicom/functional/: CVR.py  DTI.py  RESTING.py  __init__.py
python/src/processing/dicom/perfusion/: ASL.py  DSC.py  __init__.py
python/src/processing/dicom/special/: MRA.py  SWAN.py  __init__.py  eSWAN.py
python/src/processing/dicom/structure/: ADC.py  DWI.py  T1.py  T2.py  __init__.py
python/src/processing/nifti/: __init__.py  postprocess.py  strategies.py
python/src/processing/nifti/special/: SWAN.py  __init__.py
python/src/processing/nifti/structure/: ADC.py  DWI.py  T1.py  T2.py  __init__.py
python/src/upload/: __init__.py  update_sql.py  upload_nifti.py
python/src/utils/: __init__.py  dicom_utils.py  file_operations.py  functional_helpers.py  reporting.py  validation.py
src/: check.py  main.py  upload_test.py
src/convert/: __init__.py  base.py  config.py  convert.py  convert_nifti.py  convert_nifti_postprocess.py  convert_nifti_to_dicom.py  dicom_rename.py  dicom_rename_ct.py  dicom_rename_mr.py  dicom_rename_mr_postprocess.py  list_dicom.py  list_nii.py
src/upload/: __init__.py  update_sql.py  upload_nifti.py
